[package]
authors = ["Starwort"]
description = "frozenset(), for Rust"
edition = "2021"
keywords = ["set", "immutability", "utility", "hashing"]
license = "MIT"
name = "frozenset"
repository = "https://github.com/Starwort/frozenset"
version = "0.2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.164", optional = true}
